# git-study

./: .gitignore  AGENTS.md  CLAUDE.md  MIGRATION_PLAN.md  README.ko.md  README.md  d32_challenge.ipynb  git-strudy-graph.ipynb  git-study-graph.ipynb  main.py  pyproject.toml  skills-lock.json
.taskmaster/: state.json
.taskmaster/tasks/: tasks.json
docs/: PRD.md  textual-color-system.md  textual-key-handling.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE.old.md
src/git_study/: __init__.py  graph.py  runtime_paths.py  secrets.py  settings.py  streamlit_app.py  types.py  update_checker.py
src/git_study/domain/: code_context.py  general_quiz.py  inline_anchor.py  quiz_parsing.py  repo_cache.py  repo_context.py  repo_map.py
src/git_study/graphs/: chat_graph.py  commit_analysis_subgraph.py  general_grade_graph.py  grade_utils.py  inline_grade_graph.py  inline_quiz_graph.py  quiz_graph.py  read_graph.py
src/git_study/llm/: client.py  schemas.py  token_tracker.py
src/git_study/prompts/: general_grade.py  general_grade_review.py  inline_anchor.py  inline_grade.py  inline_grade_review.py  inline_question.py  inline_question_review.py  quiz_analysis.py  quiz_generation.py  quiz_review.py  read_generation.py  read_review.py
src/git_study/services/: chat_service.py  general_grade_service.py  inline_grade_service.py  inline_quiz_service.py  map_service.py  (+2 more)
tests/: test_action_queue.py  test_graph_fallbacks.py  test_inline_anchor.py  test_llm_client.py  test_quiz_parsing.py  test_schemas.py  test_services.py  test_session_state.py  test_tui_app.py
(+23 files in other folders)
